--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,6 @@ edition = "2021"
 [dependencies]
 crossterm = "0.26.1"
 tokio = { version="1.28.0", features=["rt", "macros", "rt-multi-thread"] }
+tower-lsp = "0.19.0"
 tui = "0.19.0"
 unicode-width = "0.1"
