--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,11 @@ edition = "2021"
 
 [dependencies]
 crossterm = "0.26.1"
-tokio = { version="1.28.0", features=["rt", "macros", "rt-multi-thread"] }
-tower-lsp = "0.19.0"
+lsp-types = "0.94.0"
+serde = { version = "1.0.163", features = ["derive"] }
+serde_json = "1.0.96"
+tokio = { version="1.28.0", features=["rt", "macros", "rt-multi-thread", "process", "io-util"] }
+tokio-util = { version="0.7.7", features = ["codec", "io"] }
+tokio-stream = "0.1.12"
 tui = "0.19.0"
 unicode-width = "0.1"
