--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ tokio-util = { version="0.7.7", features = ["codec", "io"] }
 tokio-stream = "0.1.12"
 tui = "0.19.0"
 unicode-width = "0.1"
+anyhow = "1.0.71"
