--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -1,2 +1,6 @@
 max_width = 120
 chain_width = 120
+fn_call_width = 120
+struct_lit_width = 120
+struct_variant_width = 120
+single_line_if_else_max_width = 120
