--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ serde_json = "1.0.96"
 tokio = { version="1.28.0", features=["rt", "macros", "rt-multi-thread", "process", "io-util"] }
 tokio-util = { version="0.7.7", features = ["codec", "io"] }
 tokio-stream = "0.1.12"
-tui = { version = "0.19.0", features = ["serde"] }
+ratatui = { version = "0.23.0", features = ["serde"] }
 unicode-width = "0.1"
 anyhow = "1.0.71"
 copypasta = "0.8.2"
