--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,13 @@
 name = "idiom"
 version = "0.2.0"
 edition = "2021"
-
+include = [
+    "src/**/*",
+    "Cargo.toml",
+    "LICENCE",
+    "README.MD"
+]
+license = "MIT"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
