--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ serde_json = "1.0.96"
 tokio = { version="1.35.0", features=["rt", "macros", "rt-multi-thread", "process", "io-util"] }
 tokio-util = { version="0.7.7", features = ["codec", "io"] }
 tokio-stream = "0.1.12"
-ratatui = { version = "0.25.0", features = ["serde"] }
+ratatui = { version = "0.26.0", features = ["serde"] }
 unicode-width = "0.1"
 anyhow = "1.0.71"
 dirs = "5.0.1"
@@ -27,3 +27,4 @@ reqwest = "0.11.20"
 ignore = "0.4.20"
 fuzzy-matcher = "0.3.7"
 copypasta = "0.10"
+portable-pty = "0.8.1"
