--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,6 @@ serde_json = "1.0.116"
 tokio = { version="1.36.0", features=["rt", "macros", "rt-multi-thread", "process", "io-util"] }
 tokio-util = { version="0.7.10", features = ["codec", "io"] }
 tokio-stream = "0.1.15"
-anyhow = "1.0.82"
 dirs = "5.0.1"
 # reqwest = "0.11.20"  !TODO enable when autodownloading is created
 ignore = "0.4.20"
@@ -34,6 +33,8 @@ portable-pty = "0.8.1"
 strip-ansi-escapes = "0.2.0"
 bitflags = "2.4.2"
 regex = "1.10.4"
+thiserror = "1.0.60"
+url = {version = "2.5.0", features = ["serde"]}
 
 [profile.dev]
 debug = true
