--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ authors = ["Daniel Nikolaev <toolsproed@gmail.com>"]
 
 [dependencies]
 crossterm = "0.27.0"
-lsp-types = "0.95.0"
+lsp-types = "0.95.0" # still on version 0.95.0 (at this stage fluent-uri looks more annoying than uri)
 serde = { version = "1.0.198", features = ["derive"] }
 serde_json = "1.0.116"
 tokio = { version="1.36.0", features=["rt", "macros", "rt-multi-thread", "process", "io-util"] }
