--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ bitflags = "2.4.2"
 regex = "1.10.4"
 thiserror = "1.0.60"
 url = {version = "2.5.0", features = ["serde"]}
+unicode-width = "0.1.12"
 
 [profile.dev]
 debug = true
