--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,14 +18,14 @@ authors = ["Daniel Nikolaev <toolsproed@gmail.com>"]
 
 [dependencies]
 crossterm = "0.27.0"
-lsp-types = "0.97.0" # still on version 0.95.0 (at this stage fluent-uri looks more annoying than uri)
+lsp-types = "0.97.0"
 serde = { version = "1.0.198", features = ["derive"] }
 serde_json = "1.0.116"
 tokio = { version="1.36.0", features=["rt", "macros", "rt-multi-thread", "process", "io-util"] }
 tokio-util = { version="0.7.10", features = ["codec", "io"] }
 tokio-stream = "0.1.15"
 dirs = "5.0.1"
-# reqwest = "0.11.20"  !TODO enable when autodownloading is created
+ropey = { version = "1.6.1", default-features = false, features = ["simd"] }
 ignore = "0.4.20"
 fuzzy-matcher = "0.3.7"
 portable-pty = "0.8.1"
