--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ regex = "1.10.6"
 thiserror = "1.0.63"
 unicode-width = "0.1.13"
 copypasta = "0.10.1"
+notify = { version = "6.1.1", default-features = false, features = ["macos_kqueue"] }
 
 [profile.dev]
 debug = true
