--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,10 +20,10 @@ authors = ["Daniel Nikolaev <toolsproed@gmail.com>"]
 clap = {version = "4.5.20", features = ["derive"]}
 crossterm = "0.28.1"
 lsp-types = "0.97.0"
-serde = { version = "1.0.213", features = ["derive"] }
+serde = { version = "1.0.214", features = ["derive"] }
 serde_json = "1.0.132"
 toml = "0.8.19"
-tokio = { version="1.41.0", features=["rt", "macros", "rt-multi-thread", "process", "io-util"] }
+tokio = { version="1.41.1", features=["rt", "macros", "rt-multi-thread", "process", "io-util"] }
 tokio-util = { version="0.7.12", features = ["codec", "io"] }
 tokio-stream = "0.1.16"
 dirs = "5.0.1"
@@ -33,7 +33,7 @@ portable-pty = "0.8.1"
 strip-ansi-escapes = "0.2.0"
 bitflags = "2.6.0"
 regex = "1.11.1"
-thiserror = "1.0.65"
+thiserror = "2.0.2"
 unicode-width = "0.2.0"
 copypasta = "0.10.1"
 notify = { version = "7.0.0", default-features = false, features = ["macos_kqueue"] }
@@ -41,3 +41,7 @@ logos = "0.14.2"
 
 [profile.dev]
 debug = true
+
+[profile.release]
+strip = true
+lto = true
