--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,8 +17,8 @@ categories = ["development-tools", "text-editors"]
 authors = ["Daniel Nikolaev <toolsproed@gmail.com>"]
 
 [dependencies]
-bitflags = "2.9.0"
-clap = {version = "4.5.37", features = ["derive"]}
+bitflags = "2.9.1"
+clap = {version = "4.5.38", features = ["derive"]}
 coolor = "1.0.0"
 copypasta = "0.10.2"
 crossterm = "0.29.0"
@@ -27,7 +27,7 @@ fuzzy-matcher = "0.3.7"
 ignore = "0.4.23"
 logos = "0.15.0"
 lsp-types = "0.97.0"
-markdown = "0.3.0"
+# markdown = "0.3.0"
 notify = { version = "8.0.0", default-features = false, features = ["macos_kqueue"] }
 portable-pty = "0.9.0"
 regex = "1.11.1"
@@ -41,6 +41,8 @@ tokio-util = { version="0.7.15", features = ["codec", "io"] }
 tokio-stream = "0.1.17"
 unicode-width = "0.2.0"
 vt100 = "0.15.2"
+lazy_static = "1.5.0"
+pipeline = "0.5.0"
 
 [target.'cfg(unix)'.dependencies]
 xterm-query = "0.5.2"
