--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,9 @@ categories = ["development-tools", "text-editors"]
 authors = ["Daniel Nikolaev <toolsproed@gmail.com>"]
 
 [dependencies]
+# intern crates
+idiom_tui = "0.0.1"
+# extern crates
 bitflags = "2.9.1"
 clap = {version = "4.5.39", features = ["derive"]}
 coolor = "1.0.0"
@@ -34,7 +37,7 @@ serde = { version = "1.0.218", features = ["derive"] }
 serde_json = "1.0.140"
 strip-ansi-escapes = "0.2.1"
 thiserror = "2.0.12"
-toml = "0.8.22"
+toml = "0.8.23"
 tokio = { version="1.45.1", features=["rt", "macros", "rt-multi-thread", "process", "io-util"] }
 tokio-util = { version="0.7.15", features = ["codec", "io"] }
 tokio-stream = "0.1.17"
